--- a/be/package.json
+++ b/be/package.json
@@ -16,6 +16,7 @@
     "express": "^4.19.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "nodemon": "^3.1.0",
     "typescript": "^5.4.3"
   }
